lab1_lexical_syntax/Code/syntax.output
Terminals unused in grammar

    LOWER_THAN_ELSE


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | error Specifier SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList
   11           | VarDec error ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: %empty
   17       | ID

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP
   25       | error LP VarList RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC

   30 StmtList: %empty
   31         | Stmt StmtList

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | Exp error SEMI
   39     | RETURN Exp error
   40     | RETURN error SEMI

   41 DefList: %empty
   42        | Def DefList

   43 Def: Specifier DecList SEMI
   44    | Specifier error SEMI
   45    | Specifier DecList error

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT
   68    | Exp ASSIGNOP error
   69    | Exp AND error
   70    | Exp OR error
   71    | Exp RELOP error
   72    | Exp PLUS error
   73    | Exp MINUS error
   74    | Exp STAR error
   75    | Exp DIV error
   76    | LP error RP
   77    | MINUS error
   78    | NOT error
   79    | ID LP error RP
   80    | Exp LB error RB

   81 Args: Exp COMMA Args
   82     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 11 21 24 25 38 39 40 44 45 68 69 70 71 72 73 74 75 76 77 78 79 80
    INT <node> (258) 20 66
    FLOAT <node> (259) 67
    ID <node> (260) 17 18 19 22 23 24 61 62 64 65 79
    SEMI <node> (261) 4 5 7 8 32 34 38 40 43 44
    COMMA <node> (262) 10 26 47 81
    ASSIGNOP <node> (263) 49 50 68
    RELOP <node> (264) 53 71
    PLUS <node> (265) 54 72
    MINUS <node> (266) 55 59 73 77
    STAR <node> (267) 56 74
    DIV <node> (268) 57 75
    AND <node> (269) 51 69
    OR <node> (270) 52 70
    DOT <node> (271) 64
    NOT <node> (272) 60 78
    TYPE <node> (273) 12
    LP <node> (274) 22 23 24 25 35 36 37 58 61 62 76 79
    RP <node> (275) 22 23 24 25 35 36 37 58 61 62 76 79
    LB <node> (276) 20 21 63 80
    RB <node> (277) 20 21 63 80
    LC <node> (278) 14 29
    RC <node> (279) 14 29
    STRUCT <node> (280) 14 15
    RETURN <node> (281) 34 39 40
    IF <node> (282) 35 36
    ELSE <node> (283) 36
    WHILE <node> (284) 37
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 3
    ExtDef <node> (34)
        on left: 4 5 6 7 8
        on right: 3
    ExtDecList <node> (35)
        on left: 9 10 11
        on right: 4 10 11
    Specifier <node> (36)
        on left: 12 13
        on right: 4 5 6 8 28 43 44 45
    StructSpecifier <node> (37)
        on left: 14 15
        on right: 13
    OptTag <node> (38)
        on left: 16 17
        on right: 14
    Tag <node> (39)
        on left: 18
        on right: 15
    VarDec <node> (40)
        on left: 19 20 21
        on right: 9 10 11 20 21 28 48 49
    FunDec <node> (41)
        on left: 22 23 24 25
        on right: 6
    VarList <node> (42)
        on left: 26 27
        on right: 22 25 26
    ParamDec <node> (43)
        on left: 28
        on right: 26 27
    CompSt <node> (44)
        on left: 29
        on right: 6 33
    StmtList <node> (45)
        on left: 30 31
        on right: 29 31
    Stmt <node> (46)
        on left: 32 33 34 35 36 37 38 39 40
        on right: 31 35 36 37
    DefList <node> (47)
        on left: 41 42
        on right: 14 29 42
    Def <node> (48)
        on left: 43 44 45
        on right: 42
    DecList <node> (49)
        on left: 46 47
        on right: 43 45 47
    Dec <node> (50)
        on left: 48 49
        on right: 46 47
    Exp <node> (51)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 32 34 35 36 37 38 39 49 50 51 52 53 54 55 56 57 58 59 60 63 64 68 69 70 71 72 73 74 75 80 81 82
    Args <node> (52)
        on left: 81 82
        on right: 61 81


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI
    8       | error . Specifier SEMI

    SEMI    shift, and go to state 9
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 10
    StructSpecifier  go to state 8


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 11

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

    8 ExtDef: error Specifier . SEMI

    SEMI  shift, and go to state 22


State 11

   17 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 18 (Tag)


State 12

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 23


State 13

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 16

   25 FunDec: error . LP VarList RP

    LP  shift, and go to state 24


State 17

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP error RP

    LP  shift, and go to state 25

    $default  reduce using rule 19 (VarDec)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 20

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   11           | VarDec . error ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    error  shift, and go to state 27
    COMMA  shift, and go to state 28
    LB     shift, and go to state 29

    SEMI  reduce using rule 9 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 30

    CompSt  go to state 31


State 22

    8 ExtDef: error Specifier SEMI .

    $default  reduce using rule 8 (ExtDef)


State 23

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 24

   25 FunDec: error LP . VarList RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 25

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   24       | ID LP . error RP

    error   shift, and go to state 38
    TYPE    shift, and go to state 2
    RP      shift, and go to state 39
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 37


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   11 ExtDecList: VarDec error . ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 42
    VarDec      go to state 20


State 28

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 43
    VarDec      go to state 20


State 29

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 44
    INT    shift, and go to state 45


State 30

   29 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 34


State 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   43 Def: Specifier . DecList SEMI
   44    | Specifier . error SEMI
   45    | Specifier . DecList error

    error  shift, and go to state 47
    ID     shift, and go to state 41

    VarDec   go to state 48
    DecList  go to state 49
    Dec      go to state 50


State 33

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 51


State 34

   42 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 34


State 35

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 41

    VarDec  go to state 53


State 36

   25 FunDec: error LP VarList . RP

    RP  shift, and go to state 54


State 37

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 27 (VarList)


State 38

   24 FunDec: ID LP error . RP

    RP  shift, and go to state 56


State 39

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 40

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 57


State 41

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 42

   11 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 43

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 44

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 58


State 45

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 59


State 46

   29 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 30
    RETURN  shift, and go to state 66
    IF      shift, and go to state 67
    WHILE   shift, and go to state 68

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 70
    Stmt      go to state 71
    Exp       go to state 72


State 47

   44 Def: Specifier error . SEMI

    SEMI  shift, and go to state 73


State 48

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 74
    LB        shift, and go to state 29

    $default  reduce using rule 48 (Dec)


State 49

   43 Def: Specifier DecList . SEMI
   45    | Specifier DecList . error

    error  shift, and go to state 75
    SEMI   shift, and go to state 76


State 50

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 77

    $default  reduce using rule 46 (DecList)


State 51

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 52

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 53

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 29

    $default  reduce using rule 28 (ParamDec)


State 54

   25 FunDec: error LP VarList RP .

    $default  reduce using rule 25 (FunDec)


State 55

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 78
    ParamDec         go to state 37


State 56

   24 FunDec: ID LP error RP .

    $default  reduce using rule 24 (FunDec)


State 57

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 58

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 59

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 60

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


State 61

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 62

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .
   79    | ID . LP error RP

    LP  shift, and go to state 79

    $default  reduce using rule 65 (Exp)


State 63

   59 Exp: MINUS . Exp
   77    | MINUS . error

    error  shift, and go to state 80
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 81


State 64

   60 Exp: NOT . Exp
   78    | NOT . error

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 83


State 65

   58 Exp: LP . Exp RP
   76    | LP . error RP

    error  shift, and go to state 84
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 85


State 66

   34 Stmt: RETURN . Exp SEMI
   39     | RETURN . Exp error
   40     | RETURN . error SEMI

    error  shift, and go to state 86
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 87


State 67

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 88


State 68

   37 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 89


State 69

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 70

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 90


State 71

   31 StmtList: Stmt . StmtList

    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 30
    RETURN  shift, and go to state 66
    IF      shift, and go to state 67
    WHILE   shift, and go to state 68

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 91
    Stmt      go to state 71
    Exp       go to state 72


State 72

   32 Stmt: Exp . SEMI
   38     | Exp . error SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   80    | Exp . LB error RB

    error     shift, and go to state 92
    SEMI      shift, and go to state 93
    ASSIGNOP  shift, and go to state 94
    RELOP     shift, and go to state 95
    PLUS      shift, and go to state 96
    MINUS     shift, and go to state 97
    STAR      shift, and go to state 98
    DIV       shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    DOT       shift, and go to state 102
    LB        shift, and go to state 103


State 73

   44 Def: Specifier error SEMI .

    $default  reduce using rule 44 (Def)


State 74

   49 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 104


State 75

   45 Def: Specifier DecList error .

    $default  reduce using rule 45 (Def)


State 76

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 77

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 41

    VarDec   go to state 48
    DecList  go to state 105
    Dec      go to state 50


State 78

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 79

   61 Exp: ID LP . Args RP
   62    | ID LP . RP
   79    | ID LP . error RP

    error  shift, and go to state 106
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    RP     shift, and go to state 107

    Exp   go to state 108
    Args  go to state 109


State 80

   77 Exp: MINUS error .

    $default  reduce using rule 77 (Exp)


State 81

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   80    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 94
    DOT       shift, and go to state 102
    LB        shift, and go to state 103

    $default  reduce using rule 59 (Exp)


State 82

   78 Exp: NOT error .

    $default  reduce using rule 78 (Exp)


State 83

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   80    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 94
    DOT       shift, and go to state 102
    LB        shift, and go to state 103

    $default  reduce using rule 60 (Exp)


State 84

   76 Exp: LP error . RP

    RP  shift, and go to state 110


State 85

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   80    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 94
    RELOP     shift, and go to state 95
    PLUS      shift, and go to state 96
    MINUS     shift, and go to state 97
    STAR      shift, and go to state 98
    DIV       shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    DOT       shift, and go to state 102
    RP        shift, and go to state 111
    LB        shift, and go to state 103


State 86

   40 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 112


State 87

   34 Stmt: RETURN Exp . SEMI
   39     | RETURN Exp . error
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   80    | Exp . LB error RB

    error     shift, and go to state 113
    SEMI      shift, and go to state 114
    ASSIGNOP  shift, and go to state 94
    RELOP     shift, and go to state 95
    PLUS      shift, and go to state 96
    MINUS     shift, and go to state 97
    STAR      shift, and go to state 98
    DIV       shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    DOT       shift, and go to state 102
    LB        shift, and go to state 103


State 88

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 115


State 89

   37 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 116


State 90

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 91

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 92

   38 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 117


State 93

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 94

   50 Exp: Exp ASSIGNOP . Exp
   68    | Exp ASSIGNOP . error

    error  shift, and go to state 118
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 119


State 95

   53 Exp: Exp RELOP . Exp
   71    | Exp RELOP . error

    error  shift, and go to state 120
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 121


State 96

   54 Exp: Exp PLUS . Exp
   72    | Exp PLUS . error

    error  shift, and go to state 122
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 123


State 97

   55 Exp: Exp MINUS . Exp
   73    | Exp MINUS . error

    error  shift, and go to state 124
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 125


State 98

   56 Exp: Exp STAR . Exp
   74    | Exp STAR . error

    error  shift, and go to state 126
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 127


State 99

   57 Exp: Exp DIV . Exp
   75    | Exp DIV . error

    error  shift, and go to state 128
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 129


State 100

   51 Exp: Exp AND . Exp
   69    | Exp AND . error

    error  shift, and go to state 130
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 131


State 101

   52 Exp: Exp OR . Exp
   70    | Exp OR . error

    error  shift, and go to state 132
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 133


State 102

   64 Exp: Exp DOT . ID

    ID  shift, and go to state 134


State 103

   63 Exp: Exp LB . Exp RB
   80    | Exp LB . error RB

    error  shift, and go to state 135
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 136


State 104

   49 Dec: VarDec ASSIGNOP Exp .
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   80    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 94
    RELOP     shift, and go to state 95
    PLUS      shift, and go to state 96
    MINUS     shift, and go to state 97
    STAR      shift, and go to state 98
    DIV       shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    DOT       shift, and go to state 102
    LB        shift, and go to state 103

    $default  reduce using rule 49 (Dec)


State 105

   47 DecList: Dec COMMA DecList .

    $default  reduce using rule 47 (DecList)


State 106

   79 Exp: ID LP error . RP

    RP  shift, and go to state 137


State 107

   62 Exp: ID LP RP .

    $default  reduce using rule 62 (Exp)


State 108

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   80    | Exp . LB error RB
   81 Args: Exp . COMMA Args
   82     | Exp .

    COMMA     shift, and go to state 138
    ASSIGNOP  shift, and go to state 94
    RELOP     shift, and go to state 95
    PLUS      shift, and go to state 96
    MINUS     shift, and go to state 97
    STAR      shift, and go to state 98
    DIV       shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    DOT       shift, and go to state 102
    LB        shift, and go to state 103

    $default  reduce using rule 82 (Args)


State 109

   61 Exp: ID LP Args . RP

    RP  shift, and go to state 139


State 110

   76 Exp: LP error RP .

    $default  reduce using rule 76 (Exp)


State 111

   58 Exp: LP Exp RP .

    $default  reduce using rule 58 (Exp)


State 112

   40 Stmt: RETURN error SEMI .

    $default  reduce using rule 40 (Stmt)


State 113

   39 Stmt: RETURN Exp error .

    $default  reduce using rule 39 (Stmt)


State 114

   34 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 115

   35 Stmt: IF LP Exp . RP Stmt
   36     | IF LP Exp . RP Stmt ELSE Stmt
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   80    | Exp . LB error RB
